[package]
name = "secure-ssh"
version = "0.1.0"
edition = "2021"
authors = ["Oleg"]
description = "Hardware-token-style secure SSH client for USB flash drives"
license = "MIT"
rust-version = "1.75"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
rand = "0.8"
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }

# SSH client
async-trait = "0.1"
russh = "0.45"
russh-keys = "0.45"
tokio = { version = "1", features = ["full"] }

# Security
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal
rpassword = "7"
crossterm = "0.28"
colored = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Misc
dirs = "5"
hex = "0.4"
base64 = "0.22"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem"
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
